--- a/order.html
+++ b/order.html
@@ -21,9 +21,9 @@
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
           <div class="icons">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24">
+            <img src="imgs/notification (1).png" alt="" width="30"  >
+            <img src="imgs/world.png" alt="" width="30" >
+            <img src="imgs/profile-user.png" alt="" width="30">
           </div>
         </div>
       </nav>
@@ -31,17 +31,17 @@
       <div class="container-fluid text-center">
         <div class="row">
              <!-- -------- aside start ------- -->
-          <div class="col-2">
-            
-                <ul class="list-group">
-                    <li class="list-group-item"><img src="imgs/dashboard (1).png" alt="Dashboard" width="15px"><p>Dashboard</p></li>
-                    <li class="list-group-item"><img src="imgs/dashboard (1).png" alt="Dashboard" width="15px"><p>Products</p></li>
-                    <li class="list-group-item"><img src="imgs/dashboard (1).png" alt="Dashboard" width="15px"><p>Orders</p></li>
-                    <li class="list-group-item"><img src="imgs/dashboard (1).png" alt="Dashboard" width="15px"><p>Contact us</p></li>
-                  </ul>
-          </div>
+             <div class="col-2">
+                
+              <ul class="list-group">
+                  <li class="list-group-item"><img src="imgs/dashboard (2).png" alt="Dashboard" width="15px"><p>Dashboard</p></li>
+                  <li class="list-group-item"><img src="imgs/shopping-bag (2).png" alt="Dashboard" width="15px"><p>Products</p></li>
+                  <li class="list-group-item"><img src="imgs/shopping-list (1).png" alt="Dashboard" width="15px"><p>Orders</p></li>
+                  <li class="list-group-item"><img src="imgs/addition (1).png" alt="Dashboard" width="15px"><p>Contact us</p></li>
+                </ul>
+        </div>
 
-
+        <!-- -------- aside end ------- -->
           <div class="col-10">
             <div class="row">
                 <div class="col-8">
