--- a/product.html
+++ b/product.html
@@ -21,9 +21,9 @@
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
           <div class="icons">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24">
-          <img src="/docs/5.3/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24">
+            <img src="imgs/notification (1).png" alt="" width="30"  >
+            <img src="imgs/world.png" alt="" width="30" >
+            <img src="imgs/profile-user.png" alt="" width="30">
           </div>
         </div>
       </nav>
@@ -31,15 +31,15 @@
       <div class="container-fluid text-center">
         <div class="row">
              <!-- -------- aside start ------- -->
-          <div class="col-2">
-            
-                <ul class="list-group">
-                    <li class="list-group-item"><img src="imgs/dashboard (1).png" alt="Dashboard" width="15px"><p>Dashboard</p></li>
-                    <li class="list-group-item"><img src="imgs/dashboard (1).png" alt="Dashboard" width="15px"><p>Products</p></li>
-                    <li class="list-group-item"><img src="imgs/dashboard (1).png" alt="Dashboard" width="15px"><p>Orders</p></li>
-                    <li class="list-group-item"><img src="imgs/dashboard (1).png" alt="Dashboard" width="15px"><p>Contact us</p></li>
-                  </ul>
-          </div>
+             <div class="col-2">
+                
+              <ul class="list-group">
+                  <li class="list-group-item"><img src="imgs/dashboard (2).png" alt="Dashboard" width="15px"><p>Dashboard</p></li>
+                  <li class="list-group-item"><img src="imgs/shopping-bag (2).png" alt="Dashboard" width="15px"><p>Products</p></li>
+                  <li class="list-group-item"><img src="imgs/shopping-list (1).png" alt="Dashboard" width="15px"><p>Orders</p></li>
+                  <li class="list-group-item"><img src="imgs/addition (1).png" alt="Dashboard" width="15px"><p>Contact us</p></li>
+                </ul>
+        </div>
            <!-- -------- aside end ------- -->
            <!-- -------- main start ------- -->
           <div class="col-10">
@@ -98,10 +98,10 @@
                     <div class="col" style="display:flex; align-items: center; gap: 5%; ">
                       <input type="checkbox" >
                       <img src="" alt="">
-                      <p style="padding-top: 7%;">T-shirt for men</p>
+                      <p style="padding-top: 7%;">Iphone 13 pro max</p>
                     </div>
                     <div class="col">
-                      $3.50
+                      $850
                     </div>
                     <div class="col" >
                       <div style="width: 40%; background-color: rgb(38, 255, 136); border-radius: 20px;">Active</div>
@@ -119,10 +119,10 @@
                     <div class="col" style="display:flex; align-items: center; gap: 5%; ">
                       <input type="checkbox" >
                       <img src="" alt="">
-                      <p style="padding-top: 7%;">T-shirt for men</p>
+                      <p style="padding-top: 7%;">Iphone 13 pro max</p>
                     </div>
                     <div class="col">
-                      $3.50
+                      $850
                     </div>
                     <div class="col" >
                       <div style="width: 40%; background-color: rgb(38, 255, 136); border-radius: 20px;">Active</div>
@@ -140,10 +140,10 @@
                     <div class="col" style="display:flex; align-items: center; gap: 5%; ">
                       <input type="checkbox" >
                       <img src="" alt="">
-                      <p style="padding-top: 7%;">T-shirt for men</p>
+                      <p style="padding-top: 7%;">Iphone 13 pro max</p>
                     </div>
                     <div class="col">
-                      $3.50
+                      $850
                     </div>
                     <div class="col" >
                       <div style="width: 40%; background-color: rgb(38, 255, 136); border-radius: 20px;">Active</div>
@@ -161,10 +161,10 @@
                     <div class="col" style="display:flex; align-items: center; gap: 5%; ">
                       <input type="checkbox" >
                       <img src="" alt="">
-                      <p style="padding-top: 7%;">T-shirt for men</p>
+                      <p style="padding-top: 7%;">Iphone 13 pro max</p>
                     </div>
                     <div class="col">
-                      $3.50
+                      $850
                     </div>
                     <div class="col" >
                       <div style="width: 40%; background-color: rgb(38, 255, 136); border-radius: 20px;">Active</div>
@@ -182,10 +182,10 @@
                     <div class="col" style="display:flex; align-items: center; gap: 5%; ">
                       <input type="checkbox" >
                       <img src="" alt="">
-                      <p style="padding-top: 7%;">T-shirt for men</p>
+                      <p style="padding-top: 7%;">Iphone 13 pro max</p>
                     </div>
                     <div class="col">
-                      $3.50
+                      $850
                     </div>
                     <div class="col" >
                       <div style="width: 40%; background-color: rgb(38, 255, 136); border-radius: 20px;">Active</div>
@@ -203,10 +203,10 @@
                     <div class="col" style="display:flex; align-items: center; gap: 5%; ">
                       <input type="checkbox" >
                       <img src="" alt="">
-                      <p style="padding-top: 7%;">T-shirt for men</p>
+                      <p style="padding-top: 7%;">Iphone 13 pro max</p>
                     </div>
                     <div class="col">
-                      $3.50
+                      $850
                     </div>
                     <div class="col" >
                       <div style="width: 40%; background-color: rgb(38, 255, 136); border-radius: 20px;">Active</div>
@@ -224,10 +224,10 @@
                     <div class="col" style="display:flex; align-items: center; gap: 5%; ">
                       <input type="checkbox" >
                       <img src="" alt="">
-                      <p style="padding-top: 7%;">T-shirt for men</p>
+                      <p style="padding-top: 7%;">Iphone 13 pro max</p>
                     </div>
                     <div class="col">
-                      $3.50
+                      $850
                     </div>
                     <div class="col" >
                       <div style="width: 40%; background-color: rgb(38, 255, 136); border-radius: 20px;">Active</div>
